- Linux: Auto-remove screenshot file from pictures-directory on Wayland. Thanks, [@PavelDobCZ23](https://github.com/PavelDobCZ23)! ([#600](https://github.com/dynobo/normcap/issues/600))
- Linux: Fix `grim` being tried for screenshots on non-compatible compositors.
- MacOS: Fix crash on start. ([#584](https://github.com/dynobo/normcap/issues/586))

## v0.5.4 (2024-01-15)

- All: Fix duplicate capture window if started twice
  ([#580](https://github.com/dynobo/normcap/issues/580))
- Linux: Improve robustness of window positioning on Wayland.
- Linux: Improve debug output regarding clipboard methods.
  ([#581](https://github.com/dynobo/normcap/issues/581))

## v0.5.3 (2024-01-04)

- All: Add CLI argument for selecting clipboard handler (mainly intended for debugging).
- Linux: Revert clipboard handling to use Qt on Xorg, wl-clipboard on Wayland, and xclip
  only on AwesomeWM and Gnome 45. ([#581](https://github.com/dynobo/normcap/issues/581))

## v0.5.2 (2023-12-12)

- All: Fix `normcap` entry point to non-existing function.

## v0.5.1 (2023-12-12)

- All: Fix accidentally removed `normcap` entry point for Python package.

## v0.5.0 (2023-12-12)

- All: Add Swedish [localization](./normcap/resources/locales/README.md). Thanks,
  [@eson57](https://github.com/eson57)!
  ([#599](https://github.com/dynobo/normcap/pull/566))
- All: Fix issue where introduction window was still visible on the screen capture UI.
  ([#536 comment](https://github.com/dynobo/normcap/issues/536#issuecomment-1752110232))
- All: Fix missing line breaks in "raw"-mode
  ([#502 comment](https://github.com/dynobo/normcap/issues/502#issuecomment-1726291608))
- All: Improve line breaks for paragraphs detected in "parse"-mode
  ([#502](https://github.com/dynobo/normcap/issues/502))
- All: Add verification of top level domains to reduce false positive URL detections in
  "parse"-mode.
- All: Add cleansing of some UTF-8 chars in "parse"-mode, e.g. `„` and `“` will be